Fixed horizontal scrolling problem
The full-browser width backgrounds caused horizontal scrolling. Seems
putting 'overflow-x: hidden' on both html and body is necessary to
correct this.

--- a/fresco/static/frescotheme.css
+++ b/fresco/static/frescotheme.css
@@ -68,6 +68,8 @@ html {
 
 body {
     margin: 0;
+}
+html, body {
     overflow-x: hidden;
 }
 
